@@ -1,4 +1,5 @@
 
+  * Added an option in Preferences -> Playback to remove played tracks
   * Added print and copy to clipboard of lyrics
   * Enabled option to edit tracks from the player playlist
   * When some preferences are modified the settings are propagated where its needed
